<resources>
    <string name="app_name">Court Counter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="skor1">9</string>
    <string name="skor2">16</string>
    <string name="plus3_1">+3 Points</string>
    <string name="plus3_2">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="reset">Reset</string>
    <string name="free_throw1">Free Throw</string>
    <string name="free_throw2">Free Throw</string>
    <string name="nama">Nama : Azzam Fattahulhaq Santoso</string>
    <string name="nim_6706184036">NIM : 6706184036</string>
    <string name="kelas">Kelas : D3IF-42-04</string>
</resources>
